# lox

./: Cargo.toml  LICENSE  README.md  TODO.md  go.mod  mise.toml
cmd/cli/: main.go
internal/errors/: errors.go
internal/interpreter/: interpreter.go
internal/scanner/: scanner.go  token.go
samples/: comments.lox  continue-break.lox  example.lox  for-loop.lox  numbers.lox  scoping.lox  strings.lox  symbols.lox
src/: ast.rs  backend.rs  environment.rs  frontend.rs  interpreter.rs  lib.rs  lox.rs  lox_error.rs  main.rs  parser.rs  runtime.rs  scanner.rs  token.rs
src/ast/: expr.rs  expression.rs  printer.rs  statement.rs  stmt.rs
src/backend/: environment.rs  interpreter.rs  runtime.rs  runtime_error.rs  value.rs
src/frontend/: parser.rs  scanner.rs  scanner_error.rs  syntax_error.rs  token.rs
